sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
var pot:Int=0;

	while(pot!=getNombreValeurs()-1){

		if(pot==-1){
			pot+1
		}
		if(plusPetit(pot+1,pot)){
			echange(pot,pot+1);
			pot-=1;	
		}else{
			pot+=1;
		}
	}
}
